# Dicoding-BelajarFundamentalGenerativeAI

./: README.md  Streamlit_submission_BFGAI_Muhammad Abiya Makruf.ipynb  pyproject.toml
streamlit_app/: app.py  logic.py
