[project]
name = "dicoding-belajarfundamentalgenerativeai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.1",
    "huggingface-hub>=1.9.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "pyngrok>=8.0.0",
    "safetensors>=0.7.0",
    "scipy>=1.17.1",
    "streamlit>=1.56.0",
    "streamlit-drawable-canvas==0.8.0",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"
